--- a/src/main/resources/templates/OEE.html
+++ b/src/main/resources/templates/OEE.html
@@ -35,12 +35,13 @@
                     <div class="col-12">
                         <div class="page-title-box d-flex align-items-center justify-content-between">
                             <h4 class="mb-0"></h4>
-                            <div class="page-title-right">
-                                <ol class="breadcrumb m-0">
-                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Nazox</a></li>
-                                    <li class="breadcrumb-item active">Dashboard</li>
-                                </ol>
-                            </div>
+<!--          无用的右侧标题                  -->
+<!--                            <div class="page-title-right">-->
+<!--                                <ol class="breadcrumb m-0">-->
+<!--                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Nazox</a></li>-->
+<!--                                    <li class="breadcrumb-item active">Dashboard</li>-->
+<!--                                </ol>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div><!-- end page title -->
