--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,14 +34,14 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="page-title-box d-flex align-items-center justify-content-between">
-                            <h4 class="mb-0" style="font-size: x-large;color: #3fc3ee" align="center">欢饮来到主页！</h4>
-
-                            <div class="page-title-right">
-                                <ol class="breadcrumb m-0">
-                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Nazox</a></li>
-                                    <li class="breadcrumb-item active">Dashboard</li>
-                                </ol>
-                            </div>
+                            <h4 class="mb-0" style="font-size: x-large;color: #3fc3ee" align="center">欢迎来到主页！</h4>
+<!--无用的右侧标题-->
+<!--                            <div class="page-title-right">-->
+<!--                                <ol class="breadcrumb m-0">-->
+<!--                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Nazox</a></li>-->
+<!--                                    <li class="breadcrumb-item active">Dashboard</li>-->
+<!--                                </ol>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div><!-- end page title -->
