--- a/src/main/resources/templates/productionplan.html
+++ b/src/main/resources/templates/productionplan.html
@@ -30,15 +30,40 @@
                     <div class="col-12">
                         <div class="page-title-box d-flex align-items-center justify-content-between"><h4 class="mb-0">
                             生产计划</h4>
-                            <div class="page-title-right">
-                                <ol class="breadcrumb m-0">
-                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Ecommerce</a></li>
-                                    <li class="breadcrumb-item active">Orders</li>
-                                </ol>
-                            </div>
+<!--     无用的右侧标题                       -->
+<!--                            <div class="page-title-right">-->
+<!--                                <ol class="breadcrumb m-0">-->
+<!--                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Ecommerce</a></li>-->
+<!--                                    <li class="breadcrumb-item active">Orders</li>-->
+<!--                                </ol>-->
+<!--                            </div>-->
                         </div>
                     </div>
                 </div><!-- end page title -->
+<!--    查询            -->
+<!--                <div class="row">-->
+<!--                    <div class="col-lg-12">-->
+<!--                        <div class="card">-->
+<!--                            <div class="card-body  pt-0">-->
+<!--                                <span class="nav-link font-weight-bold p-3">查询区域</span>-->
+<!--                                <div class="row">-->
+<!--                                    <form class="form-inline">-->
+<!--                                        <div class="form-group">-->
+<!--                                            <label for="exampleInputName2">Name</label>-->
+<!--                                            <input type="text" class="form-control" id="exampleInputName2" placeholder="Jane Doe">-->
+<!--                                        </div>-->
+<!--                                        <div class="form-group">-->
+<!--                                            <label for="exampleInputEmail2">Email</label>-->
+<!--                                            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="jane.doe@example.com">-->
+<!--                                        </div>-->
+<!--                                        <button type="submit" class="btn btn-default">Send invitation</button>-->
+<!--                                    </form>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--    查询结束            -->
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="card">
