--- a/src/main/resources/templates/kanban-baojingjilu.html
+++ b/src/main/resources/templates/kanban-baojingjilu.html
@@ -28,42 +28,181 @@
     <div class="main-content">
         <div class="page-content">
             <div class="container-fluid">
+
                 <!--设备警告展示块-->
-                <div class="row" th:each="item:${lists}">
+<!--    OP40、OP50            -->
+                <div class="row">
+                    <!--  OP40-车床 -->
                     <div class="col-lg-5 border-light border card">
-                        <div class="card bg-primary text-white-50"  th:if="${item.getDeviceStatus()}=='空闲'">
-                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"  th:text="${item.getDeviceName()}"><i
-                                    class="mdi mdi-block-helper mr-3"></i>设备名称</h5>
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="'[' + ${item.getDeviceStatus()} + ']'">&nbsp;[设备状态]</span>
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${item.getDeviceLocation()}">&nbsp;设备所在地</span>
+                        <div class="card bg-primary text-white-50">
+                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
+                                    class="mdi mdi-check-all mr-3"></i>OP40-车床</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
-                        <div class="card bg-warning text-white-50"  th:if="${item.getDeviceStatus()}=='设定'">
-                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"  th:text="${item.getDeviceName()}"><i
-                                    class="mdi mdi-block-helper mr-3"></i>设备名称</h5>
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="'[' + ${item.getDeviceStatus()} + ']'">&nbsp;[设备状态]</span>
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${item.getDeviceLocation()}">&nbsp;设备所在地</span>
+                        <div class="span3 pre-scrollable" style="height:200px">
+                            <div th:each="item:${lists}">
+                                <div th:if="${item.getDeviceName()=='OP40-车床'}">
+                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <hr style="margin: 5px">
+                                </div>
                             </div>
                         </div>
-                        <div class="card bg-danger text-white-50"  th:if="${item.getDeviceStatus()}=='停机'">
-                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"  th:text="${item.getDeviceName()}"><i
-                                    class="mdi mdi-block-helper mr-3"></i>设备名称</h5>
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="'[' + ${item.getDeviceStatus()} + ']'">&nbsp;[设备状态]</span>
-                                &nbsp;&nbsp;<span class="zhuangT0" th:text="${item.getDeviceLocation()}">&nbsp;设备所在地</span>
+                    </div>
+                    <!--  OP50-车床 -->
+                    <div class="col-lg-5 border-light border card">
+                        <div class="card bg-primary text-white-50">
+                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
+                                    class="mdi mdi-check-all mr-3"></i>OP50-车床</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
                             </div>
                         </div>
-                        <!--                                    <p class="card-text" style="margin: -10px 15px 15px 15px">Some quick example text to build on the card title and make up-->
-                        <!--                                        the bulk of the card's content.</p>-->
-                        <div class="span3">
-
-                            报警ID：<span class="span2" th:text="${item.getWarnId()}">报警ID</span></br>
-                            <hr style="margin: 5px">
-                            报警时间：<span class="span2" th:text="${item.getWarnTime()}">报警时间</span></br>
-                            <hr style="margin: 5px">
-                            报警信息：<span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
-
+                        <div class="span3 pre-scrollable" style="height:200px">
+                            <div th:each="item:${lists}">
+                                <div th:if="${item.getDeviceName()=='OP50-车床'}">
+                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <hr style="margin: 5px">
+                                </div>
+                            </div>
                         </div>
+                    </div>
+                </div><!-- end row -->
 
+<!--    OP60、OP70            -->
+                <div class="row">
+                    <!--  OP60-立加 -->
+                    <div class="col-lg-5 border-light border card">
+                        <div class="card bg-primary text-white-50">
+                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
+                                    class="mdi mdi-check-all mr-3"></i>OP60-立加</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                            </div>
+                        </div>
+                        <div class="span3 pre-scrollable" style="height:200px">
+                            <div th:each="item:${lists}">
+                                <div th:if="${item.getDeviceName()=='OP60-立加'}">
+                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <hr style="margin: 5px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  OP70-立加 -->
+                    <div class="col-lg-5 border-light border card">
+                        <div class="card bg-primary text-white-50">
+                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
+                                    class="mdi mdi-check-all mr-3"></i>OP70-立加</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                            </div>
+                        </div>
+                        <div class="span3 pre-scrollable" style="height:200px">
+                            <div th:each="item:${lists}">
+                                <div th:if="${item.getDeviceName()=='OP70-立加'}">
+                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <hr style="margin: 5px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- end row -->
+
+<!--    PLC-1、PLC-2            -->
+                <div class="row">
+                    <!--  总控PLC-1 -->
+                    <div class="col-lg-5 border-light border card">
+                        <div class="card bg-primary text-white-50">
+                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
+                                    class="mdi mdi-check-all mr-3"></i>总控PLC-1</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                            </div>
+                        </div>
+                        <div class="span3 pre-scrollable" style="height:200px">
+                            <div th:each="item:${lists}">
+                                <div th:if="${item.getDeviceName()=='总控PLC-1'}">
+                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <hr style="margin: 5px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  总控PLC-2 -->
+                    <div class="col-lg-5 border-light border card">
+                        <div class="card bg-primary text-white-50">
+                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
+                                    class="mdi mdi-check-all mr-3"></i>总控PLC-2</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                            </div>
+                        </div>
+                        <div class="span3 pre-scrollable" style="height:200px">
+                            <div th:each="item:${lists}">
+                                <div th:if="${item.getDeviceName()=='总控PLC-2'}">
+                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <hr style="margin: 5px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- end row -->
+
+<!--    测量机、打标机            -->
+                <div class="row">
+                    <!--  打标机 -->
+                    <div class="col-lg-5 border-light border card">
+                        <div class="card bg-primary text-white-50">
+                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
+                                    class="mdi mdi-check-all mr-3"></i>测量机</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                            </div>
+                        </div>
+                        <div class="span3 pre-scrollable" style="height:200px">
+                            <div th:each="item:${lists}">
+                                <div th:if="${item.getDeviceName()=='测量机'}">
+                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <hr style="margin: 5px">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  打标机 -->
+                    <div class="col-lg-5 border-light border card">
+                        <div class="card bg-primary text-white-50">
+                            <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
+                                    class="mdi mdi-check-all mr-3"></i>打标机</h5>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[设定]</span>
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                            </div>
+                        </div>
+                        <div class="span3 pre-scrollable" style="height:200px">
+                            <div th:each="item:${lists}">
+                                <div th:if="${item.getDeviceName()=='打标机'}">
+                                    编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
+                                    <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
+                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <hr style="margin: 5px">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div><!-- end row -->
 
