--- a/src/main/resources/templates/ChanPin.html
+++ b/src/main/resources/templates/ChanPin.html
@@ -25,50 +25,71 @@
 
     <!-- ============================================================== -->
     <!-- Start right Content here -->
-    <!-- ============================================================== -->
-    <div class="col-lg-6" style="width: 800px;height:400px;margin: auto;margin-top: 100px">
-        <div class="card">
-            <div class="card-body"><h4 class="card-title">产品信息</h4>
 
-                <!--                <p class="card-title-desc">For basic styling—light padding and only horizontal-->
-                <!--                    dividers—add the base class <code>.table</code>to any <code>&lt;table&gt;</code>.-->
-                <!--                </p>-->
+    <div class="main-content">
+        <div class="page-content">
+            <div class="container-fluid">
+                <!-- start page title -->
+                <div class="row">
+                    <div class="col-12">
+                    </div>
+                    <div class="col-12">
+                    </div>
+                </div><!-- end page title -->
 
-                <div class="table-responsive" style="width: auto;height: 400px">
-                    <table class="table mb-0">
-                        <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>上线数量</th>
-                            <th>下线数量</th>
-                            <th>整线合格率</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>x</td>
-                            <td>x</td>
-                            <td>x</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>x</td>
-                            <td>x</td>
-                            <td>x</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>x</td>
-                            <td>x</td>
-                            <td>x</td>
-                        </tr>
-                        </tbody>
-                    </table>
+                <div class="card" style="margin-top: 10px">
+                    <div class="card-body"><h4 class="card-title">产品信息</h4>
+                        <div class="table-responsive">
+                            <table class="table mb-0 table-bordered table-striped" style="width: 800px;margin:auto;auto;text-align: center">
+                                <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>上线数量</th>
+                                    <th>下线数量</th>
+                                    <th>整线合格率</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>x</td>
+                                    <td>x</td>
+                                    <td>x</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </div><!-- container-fluid -->
                 </div>
+
             </div>
         </div>
-    </div>
+    </div><!-- end row -->
 
 
 </div><!-- container-fluid -->
@@ -95,4 +116,3 @@
 </body>
 
 
-tables
