--- a/src/main/resources/templates/kanban-baojingjilu.html
+++ b/src/main/resources/templates/kanban-baojingjilu.html
@@ -18,7 +18,7 @@
     <link href="../static/css/app.min.css" id="app-style" rel="stylesheet" type="text/css"/>
 </head>
 <body data-sidebar="light"><!-- Begin page -->
-<div id="layout-wrapper">
+<body id="layout-wrapper">
 
     <!--topbar and leftbar start-->
     <div th:include="~{common::TopAndLeft}"></div>
@@ -30,7 +30,7 @@
             <div class="container-fluid">
 
                 <!--设备警告展示块-->
-<!--    OP40、OP50            -->
+                <!--    OP40、OP50            -->
                 <div class="row">
                     <!--  OP40-车床 -->
                     <div class="col-lg-5 border-light border card">
@@ -46,7 +46,7 @@
                                 <div th:if="${item.getDeviceName()=='OP40-车床'}">
                                     编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
                                     <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
                                     <hr style="margin: 5px">
                                 </div>
                             </div>
@@ -66,7 +66,7 @@
                                 <div th:if="${item.getDeviceName()=='OP50-车床'}">
                                     编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
                                     <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
                                     <hr style="margin: 5px">
                                 </div>
                             </div>
@@ -74,7 +74,7 @@
                     </div>
                 </div><!-- end row -->
 
-<!--    OP60、OP70            -->
+                <!--    OP60、OP70            -->
                 <div class="row">
                     <!--  OP60-立加 -->
                     <div class="col-lg-5 border-light border card">
@@ -90,7 +90,7 @@
                                 <div th:if="${item.getDeviceName()=='OP60-立加'}">
                                     编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
                                     <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
                                     <hr style="margin: 5px">
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
                                 <div th:if="${item.getDeviceName()=='OP70-立加'}">
                                     编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
                                     <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
                                     <hr style="margin: 5px">
                                 </div>
                             </div>
@@ -118,7 +118,7 @@
                     </div>
                 </div><!-- end row -->
 
-<!--    PLC-1、PLC-2            -->
+                <!--    PLC-1、PLC-2            -->
                 <div class="row">
                     <!--  总控PLC-1 -->
                     <div class="col-lg-5 border-light border card">
@@ -134,7 +134,7 @@
                                 <div th:if="${item.getDeviceName()=='总控PLC-1'}">
                                     编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
                                     <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
                                     <hr style="margin: 5px">
                                 </div>
                             </div>
@@ -154,7 +154,7 @@
                                 <div th:if="${item.getDeviceName()=='总控PLC-2'}">
                                     编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
                                     <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
                                     <hr style="margin: 5px">
                                 </div>
                             </div>
@@ -162,7 +162,7 @@
                     </div>
                 </div><!-- end row -->
 
-<!--    测量机、打标机            -->
+                <!--    测量机、打标机            -->
                 <div class="row">
                     <!--  打标机 -->
                     <div class="col-lg-5 border-light border card">
@@ -178,7 +178,7 @@
                                 <div th:if="${item.getDeviceName()=='测量机'}">
                                     编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
                                     <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
                                     <hr style="margin: 5px">
                                 </div>
                             </div>
@@ -198,7 +198,7 @@
                                 <div th:if="${item.getDeviceName()=='打标机'}">
                                     编号：<span class="span2" th:text="${item.getWarnId()}">报警ID</span>
                                     <span class="span2" style="float:right" th:text="${item.getWarnTime()}">报警时间</span></br>
-                                    <span class="span2" th:text="${item.getWarnInfomation()}">报警信息</span></br>
+                                    <span class="span2" th:text="${item.getWarnInformation()}">报警信息</span></br>
                                     <hr style="margin: 5px">
                                 </div>
                             </div>
@@ -206,9 +206,9 @@
                     </div>
                 </div><!-- end row -->
 
-                </div><!-- container-fluid --></div>
-        </div><!-- end main content--></div>
-    <!-- Right Sidebar -->
+            </div><!-- container-fluid --></div>
+    </div><!-- end main content--></div>
+<!-- Right Sidebar -->
 
     <!-- JAVASCRIPT -->
     <script src="../static/libs/jquery/jquery.min.js"></script>
